--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.OssigeNow"
         tools:targetApi="31">
         <activity
+            android:name=".GroupActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NewGroupActivity"
+            android:exported="false" />
+        <activity
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
